RESOLVED FIXED 202754
Youtube.com is unable to enter the back/forward cache on macOS
https://bugs.webkit.org/show_bug.cgi?id=202754
Summary Youtube.com is unable to enter the back/forward cache on macOS
Chris Dumez
Reported 2019-10-09 09:52:18 PDT
Youtube.com is unable to enter the back/forward cache on macOS.
Attachments
Patch (12.34 KB, patch)
2019-10-09 10:13 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-09 09:52:38 PDT
Chris Dumez
Comment 2 2019-10-09 10:13:14 PDT
WebKit Commit Bot
Comment 3 2019-10-09 15:03:38 PDT
Comment on attachment 380540 [details] Patch Clearing flags on attachment: 380540 Committed r250935: <https://trac.webkit.org/changeset/250935>
WebKit Commit Bot
Comment 4 2019-10-09 15:03:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.