Youtube.com is unable to enter the back/forward cache on macOS https://bugs.webkit.org/show_bug.cgi?id=202754 <rdar://problem/56117666>

Reviewed by Eric Carlson.

Source/WebCore:

As of r250542, the MainThreadGenericEventQueue used by both MediaSource and
SourceBuffer to fire event is PageCache-aware. As a result, both these
ActiveDOMObjects can now safety suspend without risking running script while
in the page cache. I did have to update some logic in MediaSource::removeSourceBuffer()
to make sure we do not unnecessarily construct new ActiveDOMObjects while
suspending, as this is not allowed.

Test: media/media-source/media-source-page-cache.html

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::removeSourceBuffer):
(WebCore::MediaSource::canSuspendForDocumentSuspension const):
* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::canSuspendForDocumentSuspension const):
* Modules/mediasource/SourceBuffer.h:

LayoutTests:

Add layout test coverage.

* media/media-source/media-source-page-cache-expected.txt: Added.
* media/media-source/media-source-page-cache.html: Added.


Canonical link: https://commits.webkit.org/216227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250935 268f45cc-cd09-0410-ab3c-d52691b4dbfc